test_suite5/ALAN/test_suite/alan-2022-examples/failing/004690_mutation.alan
source UEb begin leave t(>) end
